# xmonobut

./: ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  main.c  tray.c  tray.h  xmonobut.xpm
debian/: changelog  control  control_  copyright  postinst  prerm  rules
doc/: Makefile.am  Makefile.in  xmonobut.1.in
ipkg/: Makefile.am  Makefile.in  control.in
